Update branding to Fade

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "vibrant_bubble_chat",
-  "name": "vibrant_bubble_chat",
+  "short_name": "fade",
+  "name": "fade",
   "icons": [
     {
       "src": "favicon.ico",
